--- a/style.scss
+++ b/style.scss
@@ -121,7 +121,7 @@ h1 {
     grid-column-end: auto;
 
     @media screen and (min-width: 768px) {
-      grid-column: 1/-1;
+      // grid-column: 1/-1;
       grid-row-end: span 2;
     }
   }
